5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1650_2728.log
== TEST (2019-04-15 13:30:01) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 8
x2 = 12
if tipo = "A":
	print(perc*x1)
	print(tipo)
else:
	print(perc*x2)
	print(tipo)
-- ERROR:
File "XXXX", line 5
    if tipo = "A":
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:30:09) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 8
x2 = 12
if tipo == "A":
	print(perc*x1)
	print(tipo)
else:
	print(perc*x2)
	print(tipo)
-- OUTPUT:
780.0
B
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:30:25) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 8
x2 = 12
if tipo == "A":
	print(perc/x1)
	print(tipo)
else:
	print(perc/x2)
	print(tipo)
-- OUTPUT:
5.416666666666667
B
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:30:31) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 8
x2 = 12
if tipo == "A":
	print(perc/x1)
	print(tipo)
else:
	print(perc/x2)
	print(tipo)
-- EXECUTION TIME:
0.230286
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
B
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
A
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
A
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:30:34) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 8
x2 = 12
if tipo == "A":
	print(perc/x1)
	print(tipo)
else:
	print(perc/x2)
	print(tipo)
-- OUTPUT:
5.416666666666667
B
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:31:19) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 1/8
x2 = 1/12
if tipo == "A":
	print(perc*x1)
	print(tipo)
else:
	print(perc*x2)
	print(tipo)
-- OUTPUT:
5.416666666666666
B
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:31:23) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 1/8
x2 = 1/12
if tipo == "A":
	print(perc*x1)
	print(tipo)
else:
	print(perc*x2)
	print(tipo)
-- EXECUTION TIME:
0.154533
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666666
B
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
A
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
A
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:31:26) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 1/8
x2 = 1/12
if tipo == "A":
	print(perc*x1)
	print(tipo)
else:
	print(perc*x2)
	print(tipo)
-- OUTPUT:
5.416666666666666
B
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:31:43) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 1/8
x2 = 1/12
if tipo == "A":
	print(perc*x1)
else:
	print(perc*x2)

-- OUTPUT:
5.416666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:31:46) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 1/8
x2 = 1/12
if tipo == "A":
	print(perc*x1)
else:
	print(perc*x2)

-- EXECUTION TIME:
0.165976
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666666
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:32:19) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 1/8
x2 = 1/12
if tipo == "A":
	print(round(perc*x1, 2))
else:
	print(round(perc*x2, 2))

-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:23) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 1/8
x2 = 1/12
if tipo == "A":
	print(round(perc*x1, 2))
else:
	print(round(perc*x2, 2))

-- EXECUTION TIME:
0.169399
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:32:24) 
-- CODE:
perc = float(input("percurso: "))
tipo = input("tipo de carro, A ou B: ")
x1 = 1/8
x2 = 1/12
if tipo == "A":
	print(round(perc*x1, 2))
else:
	print(round(perc*x2, 2))

-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
